--- a/root_modules/CSS/styles.css
+++ b/root_modules/CSS/styles.css
@@ -254,7 +254,6 @@ nav .navlinks li a:hover {
     word-spacing: -0.2em; /*space between words */
 }
 /**************************************************************/
-
 /* Styling for the verified badge next to the name: */
 .verified-badge {
     width: 30px;
@@ -305,19 +304,18 @@ nav .navlinks li a:hover {
 /* Keyframes for the bounce animation */
 @keyframes bounce {
     0% {
-        transform: scale(1);
+        transform: scale(1); /* Starts at the original size */
     }
     30% {
-        transform: scale(1.3);
+        transform: scale(1.3); /* Scales up slightly */
     }
     50% {
-        transform: scale(0.9);
+        transform: scale(0.9); /* Shrinks slightly */
     }
     100% {
-        transform: scale(1);
+        transform: scale(1); /* Returns to the original size */
     }
 }
-
 /******************************************************************/
 
 /* Animated Text Styles: */
