--- a/root_modules/CSS/styles.css
+++ b/root_modules/CSS/styles.css
@@ -591,6 +591,11 @@ svg {
         cursor: pointer;
         transition: transform 0.2s ease-in-out;
     }
+    .hero-text h1 {
+        color: #00ff33;
+        font-size: 2.5em;
+        word-spacing: -0.2em; /*space between words */
+    }
 }
 /******************************************************/
 
@@ -700,7 +705,7 @@ svg {
     }
     .hero-text h1 {
         color: #00ff33;
-        font-size: 3em;
+        font-size: 2.5em;
         word-spacing: -0.2em; /*space between words */
     }
 }
@@ -743,7 +748,7 @@ svg {
     }
     .hero-text h1 {
         color: #00ff33;
-        font-size: 3em;
+        font-size: 2.5em;
         word-spacing: -0.2em; /*space between words */
     }
 }
